# QARQI

./: .coverage  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  main.py  mkdocs.yml  pyproject.toml  requirements.txt  utils.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
_STASH_QARQI/: README.md  circuit.py  main.py  plots.py  pyproject.toml  utils.py
docs/: CNAME  guide.md  index.md
docs/api/: core.md  utils.md
examples/: introduction_to_qarqi.py
qarqi/cli/: main.py
qarqi/core/: circuit.py  results.py
qarqi/utils/: math.py  plots.py
tests/: conftest.py  test_simulation.py
